# miniscript

./: Cargo.toml  README.md
examples/: binary_encode.rs  parser.rs
res/: mod.mns  test.mns  test.shit
src/: lib.rs  main.rs
src/codegen/: compiler.rs  mod.rs
src/compiler/: ast.rs  error.rs  mod.rs  parser.rs
src/core/: bind.rs  mod.rs
src/frontend/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/pest/: grammar.pest  mod.rs
src/vm/: instruction.rs  mod.rs
