[package]
name = "miniscript"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@tubber.xyz>"]
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
bincode = "*"

[[example]]
name = "parser"
crate-type = ["bin"]

[[example]]
name = "binary-encode"
path = "examples/binary_encode.rs"
crate-type = ["bin"]